--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/js/server.js",
-    "dev": "nodemon src/js/server.js"
+    "dev": "nodemon src/js/server.js",
+    "build": "echo 'No build needed for static frontend'"
   },
   "repository": {
     "type": "git",
